Bug 49897: Only send focus and left click events from labels to target content r=jst@netscape.com